--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ math
 rapidfuzz
 statistics
 openxlab #安装opendatalab
+pandas
+numpy
+matplotlib
+seaborn
+scipy
+scikit-learn
+tqdm
+htmltabletomd
+pypandoc
